# config/routes.rb
@@ -1,6 +1,7 @@
 # frozen_string_literal: true
 
 Rails.application.routes.draw do
+  get :health, to: ->(_env) { [204, {}, ['']] }
   namespace :most_answered do
     get :disciplines
   end
@@ -11,7 +12,6 @@ Rails.application.routes.draw do
   resources :topics
   mount Rswag::Ui::Engine => '/api-docs'
   mount Rswag::Api::Engine => '/api-docs'
-  # Define your application routes per the DSL in https://guides.rubyonrails.org/routing.html
 
   # Defines the root path route ("/")
   # root "articles#index"
